# techjam-2025-final

./: PRODUCTION_SUMMARY.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  MOCK_STREAMING_README.md  README.md  demo_api.py  docker-compose.yml  download_models.py  main.py  monitor_download.py  pyproject.toml  start.py  test_api.py  test_endpoints.py  test_mock_server.py  test_mock_streaming.py  test_omniparser_direct.py
backend/app/api/v1/: __init__.py  element_detection.py  health.py  mock_streaming.py  validation.py  websocket.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/middleware/: __init__.py  cors.py  error_handler.py
backend/app/schemas/: __init__.py  validation.py
backend/app/services/: __init__.py  cache_service.py  clip_service.py  clip_service_example.py  debug_service.py  element_detection_service.py  gpt_service.py  omniparser_service.py  validation_service.py
backend/app/utils/: __init__.py  file_handler.py
backend/debug_output/final_comparison/fba2406b-07f2-4970-ab58-1699986813df/: summary.txt
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: LoadingAnimation.tsx  SequenceBuilder.tsx
